# BazelHelloWorld

./: .bazelrc  .gitignore  WORKSPACE.bazel
BazelHelloWorld/: BUILD.bazel  BazelHelloWorldApp.swift  ContentView.swift  Info.plist
BazelHelloWorldTests/: BUILD.bazel  BazelHelloWorldTests.swift
HelloWorldKit/: BUILD.bazel  SayBye.swift  SayHello.swift
HelloWorldKitTests/: BUILD.bazel  SayByeTests.swift  SayHelloTests.swift
