load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
swift_library(
    name = "SwiftLibrary",
    testonly = True,
    srcs = glob([
        "*.swift",
    ]),
    tags = ["manual"],
    deps = [
        "//BazelHelloWorld:SwiftLibrary",
    ],
)
ios_unit_test(
    name = "BazelHelloWorldTests",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "17.2",
    deps = [":SwiftLibrary"],
)
