load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_build_test")
swift_library(
    name = "HelloWorldKit",
    module_name = "HelloWorldKit",
   srcs = glob([
        "*.swift",
    ]),
     deps = [],
    visibility = ["//visibility:public"],
)
